--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "HMAU",
   "short_name": "HMAU-PWA",
   "start_url": "/index.html",
-  "display": "fullscreen",
+  "display": "browser",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
