--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "HMAU-PWA",
   "start_url": "/regex/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f0f0f0",
   "theme_color": "#000000",
   "icons": [
     {
