--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/regex/index.html",
   "display": "standalone",
   "background_color": "#f0f0f0",
-  "theme_color": "#000000",
+  "theme_color": "#f0f0f0",
   "icons": [
     {
       "src": "/regex/icons/icon-192x192.png",
